Refatoração para uso de façade e outras limpezas